Made some style changes for letter spacing throughout. Changed the script to stop propagation for some events.

--- a/css/index.scss
+++ b/css/index.scss
@@ -88,7 +88,7 @@ section.characterEntry form {
 // TOOL TIP  ------------------------------------------------
 aside.tooltip {
 	position: absolute;
-	width: 5em;
+	width: 10em;
 	height: 5em;
 	background: $marvelRedRGBA1;
 	right: 0;
@@ -106,6 +106,7 @@ aside.tooltip {
 	p {
 		display: inline-block;
 		@include marginPaddingReset1;
+		text-align: center;
 	}
 }
 // END TOOL TIP ------------------------------------------------
