--- a/css/style.scss
+++ b/css/style.scss
@@ -62,6 +62,7 @@ body {
 	// z-index: 10;
 	// added
 	color: $baseFontColor;
+	letter-spacing: 3px;
 }
 
 .wrapper {
